--- a/Week-04/css/header.css
+++ b/Week-04/css/header.css
@@ -1,15 +1,18 @@
-.header{
-background-color: aqua;
-display: flex;
-justify-content: center;
-flex-direction: row;
-margin: auto;
-margin-left: 312px;
+.menu {
+    float: left;
+    margin-top: 20px;
 }
-.first-title{
-background-color: yellow;
-width: 35%;
-height: auto;
-font-size: 14px;
-margin: auto;
+
+.header {
+    display: flex;
+    flex-direction: column;
+    margin-left: 50px;
+    background-color: #373867;
+    color: white;
+}
+
+.first-title {
+    font-size: 14px;
+    text-decoration: overline 3px #49A37B;
+
 }
