--- a/Week-04/css/reset.css
+++ b/Week-04/css/reset.css
@@ -1,4 +1,15 @@
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4{margin: 0;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
   padding: 0;
   border: 0;
   outline: 0;
