--- a/Week-04/css/footer.css
+++ b/Week-04/css/footer.css
@@ -14,3 +14,11 @@ footer {
     padding: 5px;
     margin: 5px;
 }
+
+@media (min-width: 1024px) {
+    footer {
+        margin-left: 261px;
+text-align: center;
+border-top: 4px solid #49A37B;
+    }
+ }
