--- a/Week-04/css/main.css
+++ b/Week-04/css/main.css
@@ -1,5 +1,8 @@
-* {
+body {
     background-color: #373867;
+    color: #ffffff;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-style: normal;
 }
 
 .section-1 {
@@ -42,11 +45,14 @@
     background-color: #49A37B;
 }
 
+
+
 a {
     align-items: center;
     font-size: 12px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #ffff;
+
 }
 
 .section-2 {
@@ -90,7 +96,7 @@ a {
     padding: 5px;
     border-radius: 1px;
     border: 1px solid #ffffff;
-    color: #ffffff; 
+    color: #ffffff;
     background-color: transparent;
 }
 
@@ -108,7 +114,7 @@ a {
     padding: 5px;
     border: 1px solid #ffffff;
     border-radius: 1px;
-    color: #ffffff; 
+    color: #ffffff;
     background-color: transparent;
 }
 
@@ -116,21 +122,24 @@ a {
     margin: 10px;
     padding: 20px;
     border: 1px solid #ffffff;
-    border-radius: 1px; 
+    border-radius: 1px;
     background-color: transparent;
     color: #ffffff;
 }
 
 .btn-submit {
     margin: 10px;
-    border-radius: 1px;
+    border-radius: 4px;
+    font: 20px sans-serif;
     border: 1px solid #49A37B;
     background-color: #49A37B;
     color: #ffffff;
 }
+
 .btn-reset {
     margin: 10px;
-    border-radius: 1px;
+    border-radius: 4px;
+    font: 20px sans-serif;
     border: 1px solid #ff0000;
     background-color: #ff0000;
     color: #ffffff;
@@ -174,4 +183,70 @@ a {
     margin-right: 50px;
     margin-top: 30px;
     color: #ffff;
+}
+
+@media (min-width: 1024px) {
+    .section-1 {
+        display: inline;
+        margin-left: 20px;
+    }
+
+    .title-1 {
+        margin-top: 50px;
+        margin-left: 20px;
+        color: #ffff;
+        font-weight: 200;
+        margin: 40px;
+    }
+
+    .buttom {
+        margin-bottom: 20px;
+        margin-top: 20px;
+        margin-left: 50px;
+        margin-bottom: 40px;
+        padding: 14px;
+        background-color: #49A37B;
+    }
+
+    .first-image {
+        width: 25%;
+        margin-right: 150px;
+    }
+
+    .image-left {
+        float: left;
+        height: 40px;
+    }
+
+    .section-2 {
+        border-top: 4px solid #49A37B;
+        border-bottom: 4px solid #49A37B;
+    }
+
+    .functions {
+        display: flex;
+        flex-direction: column;
+        margin-left: 250px;
+        width: 32%;
+        margin: 30px;
+        margin-top: 30px;
+    }
+
+    .image-right {
+        position: relative;
+        margin-left: 61px;
+        display: inline-block;
+        margin: 9px;
+    }
+
+    .form-contact {
+        display: flex;
+        flex-direction: column;
+        margin-right: 20px;
+    }
+
+    .section-5 {
+        display: ruby-base;
+        color: #ffff;
+    }
 }
