--- a/Week-04/css/main.css
+++ b/Week-04/css/main.css
@@ -187,8 +187,9 @@ a {
 
 @media (min-width: 1024px) {
     .section-1 {
-        display: inline;
-        margin-left: 20px;
+        display: inline-block;
+        width: 41%;
+        margin: 30px;
     }
 
     .title-1 {
@@ -219,17 +220,10 @@ a {
     }
 
     .section-2 {
-        border-top: 4px solid #49A37B;
-        border-bottom: 4px solid #49A37B;
-    }
-
-    .functions {
         display: flex;
-        flex-direction: column;
-        margin-left: 250px;
-        width: 32%;
-        margin: 30px;
-        margin-top: 30px;
+        /*flex-direction: column;*/
+        width: 60%;
+        flex-wrap: wrap;
     }
 
     .image-right {
@@ -248,5 +242,9 @@ a {
     .section-5 {
         display: ruby-base;
         color: #ffff;
+    }
+    .functions{
+        display: flex;
+        width: 50%;
     }
 }
