--- a/Week-04/css/header.css
+++ b/Week-04/css/header.css
@@ -1,19 +1,33 @@
-.header {
-    display: inline-flex;
-    flex-direction: column;
-    margin-left: 50px;
+.header-container {
+    display: flex;
+    justify-content: center;
     background-color: #373867;
     color: white;
 }
 
-.first-title {
-    font-size: 14px;
-    text-decoration: overline 3px #49A37B;
-
+.menu-icon {
+    position: absolute;
+    top: 20px;
+    left: 30px;
 }
 
-@media (min-width: 1024px){
-    .menu{
+.header-container h1 {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+}
+
+.first-title {
+    font-size: 14px;
+    border-bottom: 3px solid #49A37B;;
+}
+
+@media (min-width: 1024px) {
+    .header-container {
+        display: none;
+    }
+    /* .menu{
         display: inline;
     }
     .header {
@@ -29,5 +43,5 @@
         font-size: 10px;
         margin-left: 30px;
         text-decoration: none;
-    }
-    }
+    } */
+}
