--- a/Week-04/css/main.css
+++ b/Week-04/css/main.css
@@ -1,17 +1,25 @@
-body {
-    background-color: #373867;
-    color: #ffffff;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-style: normal;
+main {
+    display: flex;
+    flex-direction: column;
 }
-
+.title-container {
+    display: flex;
+    justify-content: center;
+    background-color: #373867;
+    color: white;
+}
+.title-container h1 {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+}
 .section-1 {
     display: flex;
     flex-direction: column;
     height: auto;
     background-color: #373867;
 }
-
 .first-image {
     float: right;
     width: 50%;
@@ -19,7 +27,6 @@ body {
     margin-left: 50px;
 
 }
-
 .title-1 {
     margin-top: 20px;
     margin-left: 50px;
@@ -55,10 +62,24 @@ a {
 
 }
 
-.section-2 {
+.functions-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     margin-top: 10px;
     margin-right: 50px;
     background-color: #373867;
+}
+
+.function {
+    display: flex;
+    align-items: center;
+}
+
+.function img {
+    width: 82px;
+    height: 78px;
+    margin: 0px 10px
 }
 
 .image-left {
@@ -66,7 +87,6 @@ a {
     margin-left: 10px;
 }
 
-.subtitle-1,
 .subtitle-2,
 .subtitle-3,
 .subtitle-4,
@@ -75,14 +95,12 @@ a {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #ffff;
 }
-
 .image-right {
     display: flex;
     flex-direction: column;
     margin: 20px;
     margin-left: 50px;
 }
-
 .form-contact {
     display: flex;
     flex-direction: column;
@@ -90,7 +108,6 @@ a {
     margin-left: 40px;
     margin-top: 30px;
 }
-
 .name {
     margin: 10px;
     padding: 5px;
@@ -99,7 +116,6 @@ a {
     color: #ffffff;
     background-color: transparent;
 }
-
 .email {
     margin: 10px;
     padding: 5px;
@@ -108,7 +124,6 @@ a {
     color: #ffffff;
     background-color: transparent;
 }
-
 .selection {
     margin: 10px;
     padding: 5px;
@@ -117,7 +132,6 @@ a {
     color: #ffffff;
     background-color: transparent;
 }
-
 .description {
     margin: 10px;
     padding: 20px;
@@ -126,7 +140,6 @@ a {
     background-color: transparent;
     color: #ffffff;
 }
-
 .btn-submit {
     margin: 10px;
     border-radius: 4px;
@@ -135,7 +148,6 @@ a {
     background-color: #49A37B;
     color: #ffffff;
 }
-
 .btn-reset {
     margin: 10px;
     border-radius: 4px;
@@ -144,12 +156,10 @@ a {
     background-color: #ff0000;
     color: #ffffff;
 }
-
 .img-people {
     width: 30%;
     float: left;
 }
-
 .lorem {
     text-align: justify;
 }
@@ -160,58 +170,83 @@ a {
     border-bottom: 4px solid #49A37B;
     color: #ffff;
 }
-
 .sect-product,
 .sect-company,
 .sect-support {
     margin-left: 100px;
 }
-
 .title-message {
     margin-left: 10px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #ffff;
 }
-
 .img-people {
     float: right;
     margin: 30px;
 }
-
 .container-title-about {
     margin-left: 50px;
     margin-right: 50px;
     margin-top: 30px;
     color: #ffff;
 }
+.media-contact-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.media-icon-container {
+    display: flex;
+}
 
 @media (min-width: 1024px) {
     .section-1 {
         display: inline-block;
-        width: 41%;
         margin: 30px;
     }
-
-    .title-1 {
-        margin-top: 50px;
+    .title-container h1 {
+        display: inline-block;
+        text-align: start;
+        width: 100%;
+        height: 100%;
+        border-bottom: 3px solid #49A37B;
+        margin-top: 10px;
         margin-left: 20px;
-        color: #ffff;
-        font-weight: 200;
-        margin: 40px;
+      }
+      .first-title{
+        display: contents;
+        font-size: 12px;
     }
-
+    .title-1 {
+       width: 42%;
+       height: 10%;
+       margin-left: 0px;
+       font-size: 30px;
+       font-style: normal;
+       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    .subtitle-1{
+        margin-left: 0px;
+        font-size: 20px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    .text-section{
+        width: 40%;
+        height: 70%;
+        font-size: 20px;
+        text-align: justify;
+    }
     .buttom {
-        margin-bottom: 20px;
-        margin-top: 20px;
+        display: block;
+        width: 10%;
         margin-left: 50px;
         margin-bottom: 40px;
-        padding: 14px;
         background-color: #49A37B;
     }
 
     .first-image {
-        width: 25%;
-        margin-right: 150px;
+        width: 48%;
+        margin: auto;
     }
 
     .image-left {
@@ -219,18 +254,48 @@ a {
         height: 40px;
     }
 
-    .section-2 {
+    .functions-container {
+        width: 100%;
+    }
+
+    .functions-container > div {
         display: flex;
-        /*flex-direction: column;*/
-        width: 60%;
+        justify-content: center;
         flex-wrap: wrap;
+    }
+    .functions-container > p {
+        width: 334px;
+        font-size: 12px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    .title-2 {
+        width: 245px;
+        font-size: 30px;
+        margin-bottom: 60px;
+        margin-top: 60px;
+        border-bottom: 3px solid #49A37B;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    .subtitle-2, .subtitle-3, .subtitle-4, .subtitle-5{
+        width: 321px;
+        font-size: 20px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    .title-3 {
+        font-size: 30px;
+        height: 20%;
+        margin-top: 80px;
+        margin-bottom: 50px;
+    }
+    .function {
+        width: 50%;
     }
 
     .image-right {
         position: relative;
-        margin-left: 61px;
         display: inline-block;
         margin: 9px;
+        width: 21%;
     }
 
     .form-contact {
@@ -238,13 +303,40 @@ a {
         flex-direction: column;
         margin-right: 20px;
     }
-
+    .form-contact > div{
+        display: flex;
+        flex-direction: row;
+    }
+    .name, .email {
+        display: inline;
+        margin: 15px;
+        width: 50%;
+    }
+    .btn-reset, .btn-submit {
+        display: flex;
+        flex-direction: column;
+        border-radius: 5px;
+    }
+    .container-section-4{
+        display: flex;
+        flex-direction: column;
+    }
+    .title-4{
+        margin-top: 80px;
+        font-size: 30px;
+    }
     .section-5 {
         display: ruby-base;
         color: #ffff;
     }
-    .functions{
-        display: flex;
-        width: 50%;
+
+    footer {
+        display: none;
+    }
+}
+
+@media (max-width: 1023px) {
+    .title-container {
+        display: none;
     }
 }
