--- a/Week-04/css/sidebar.css
+++ b/Week-04/css/sidebar.css
@@ -2,14 +2,12 @@
     display: none;
 }
 
+
 @media (min-width: 1024px) {
     .navbar {
-        position: relative;
         display: inline-block;
         background-color: #262862;
-        width: 20%;
-        float: left;
-        height: 2270px;
+        width: 30%;
     }
 
     .search {
@@ -61,7 +59,15 @@
         font-style: normal;
         align-items: center;
     }
-
+    .list{
+        margin: 0%;
+        list-style: none;
+    }
+    .container-p-aside{
+        margin: 10px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 12px;
+    }
     .title-0 {
         font-family: 'Roboto';
         font-style: normal;
@@ -81,6 +87,7 @@
     }
 
     .p-address {
+        display: block ruby;
         color: #ffffff;
         font-size: 12px;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
