--- a/Week-04/css/style.css
+++ b/Week-04/css/style.css
@@ -1,3 +1,13 @@
+body {
+    background-color: #373867;
+    color: #ffffff;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-style: normal;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
 .p {
     margin-left: 50px;
     margin-right: 50px;
@@ -18,10 +28,8 @@
     color: #ffff;
 }
 
-.Functions {
-    display: flex;
-    flex-direction: column-reverse;
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-top: 10px;
+@media (min-width: 1024px) {
+    body {
+        flex-direction: row;
+    }
 }
