--- a/Week-04/css/header.css
+++ b/Week-04/css/header.css
@@ -1,47 +1,31 @@
 .header-container {
-    display: flex;
-    justify-content: center;
-    background-color: #373867;
-    color: white;
+display: flex;
+justify-content: center;
+background-color: #373867;
+color: white;
 }
 
 .menu-icon {
-    position: absolute;
-    top: 20px;
-    left: 30px;
+position: absolute;
+top: 20px;
+left: 0px;
 }
 
 .header-container h1 {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    width: 80%;
+text-align: center;
+display: flex;
+flex-direction: column;
+width: 80%;
 }
 
 .first-title {
-    font-size: 14px;
-    border-bottom: 3px solid #49A37B;;
+font-size: 14px;
+border-bottom: 3px solid #49A37B;
+    ;
 }
 
 @media (min-width: 1024px) {
     .header-container {
-        display: none;
+    display: none;
     }
-    /* .menu{
-        display: inline;
-    }
-    .header {
-        display:inline;
-        margin: auto;
-        font-size: 40px;
-        line-height: 10px;
-        border-bottom: 4px solid #49A37B;
-        padding-left: 20px;
-        height: 40px;
-    }
-    .first-title{
-        font-size: 10px;
-        margin-left: 30px;
-        text-decoration: none;
-    } */
 }
